[Manjunath S B] Added :login validation,ticket validation files and refactored
