# src/models/batch.model.js
@@ -2,48 +2,46 @@ import { Schema, model } from 'mongoose';
 
 const batchSchema = new Schema(
   {
-    createdBy: {    
+    createdBy: {
       type: String
     },
-    batch: {
-      batchName: {
-        type: String
-      },
-      startDate: {
-        type: String
-      },
-      endDate: {
-        type: String
-      },
-      batchTechType: {
-        type: String
-      },
-      practiceHead: {
-        type: String
-      },
-      mainMentor: {
-        type: String
-      },
-      engineers: [
-        {
-          CIC_Id: {
-            type: String
-          },
-          fullName: {
-            type: String
-          },
-          phoneNumber: {
-            type: Number
-          },
-          email: {
-            type: String
-          },
-          status: {
-            type: String
-          }
+    batchName: {
+      type: String
+    },
+    startDate: {
+      type: String
+    },
+    endDate: {
+      type: String
+    },
+    batchTechType: {
+      type: String
+    },
+    practiceHead: {
+      type: String
+    },
+    mainMentor: {
+      type: String
+    },
+    engineers: [
+      {
+        CIC_Id: {
+          type: String
+        },
+        fullName: {
+          type: String
+        },
+        phoneNumber: {
+          type: Number
+        },
+        email: {
+          type: String
+        },
+        status: {
+          type: String
         }
-      ]
-    }
+      }
+    ]
   },
   {
     timestamps: true
