# src/routes/ticket.route.js
@@ -3,17 +3,18 @@ import * as ticketController from '../controllers/ticket.controller';
 import { userAuth } from '../middlewares/auth.middleware';
 import { roleCheck } from '../middlewares/roleCheck.middleware';
 import { upload } from '../utils/fileUpload.util';
+import { ticketValidator } from '../validators/ticket.validator';
 const router = express.Router();
 let uploadFile=upload.single('file')
 
 
 //route for  create_ticket
-router.post('/raiseTicket/:cicId',uploadFile,userAuth,ticketController.raiseTicket);
+router.post('/raiseTicket/:cicId',uploadFile,ticketValidator,userAuth,ticketController.raiseTicket);
 
 //route to add follow up
-router.put('/addFollowUP/:ticketId',userAuth,roleCheck,ticketController.followUp);
+router.put('/addFollowup/:ticketId',userAuth,roleCheck,ticketController.addfollowup);
 
-//route to single ticket
+//route to get single ticket
 router.get('/getTicket/:ticketId', userAuth, ticketController.getTicket);
 
 export default router;
