# src/validators/batch.validator.js
@@ -3,12 +3,14 @@ import HttpStatus from 'http-status-codes';
 
 export const newBatchValidator = (req, res, next) => {
   const schema = Joi.object({
+    createdBy:Joi.string().optional(),
     batchName: Joi.string().required(),
     startDate: Joi.string().optional(),
     endDate: Joi.string().optional(),
     batchTechType: Joi.string().required(),
     practiceHead: Joi.string().required(),
-    mainMentor: Joi.string().optional()
+    mainMentor: Joi.string().optional(),
+    engineers:Joi.string().optional()
   });
   const { error, value } = schema.validate(req.body);
   if (error) {
